--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,21 +1,34 @@
 .App {
   padding: 0;
   margin: 0;
+  padding-left: 10px;
   background-color: #282c34;
   color: white;
   min-height: 100vh;
 }
 
+h1 {
+  margin-top: 0;
+}
+
+
 .productItem {
   display: flex;
+  margin-right: 30px;
   max-width: 80vw;
-  justify-content: space-evenly;
   align-items: center
+}
+
+.productItem>* {
+  margin-right: 50px;
 }
 
 .cartItem {
   display: flex;
   max-width: 80vw;
-  justify-content: space-evenly;
   align-items: center
+}
+
+.cartItem>* {
+  margin-right: 50px;
 }
