--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,12 +1,20 @@
 .App {
-  padding: 0;
-  margin: 0;
-  padding-left: 10px;
-  background-color: #282c34;
-  color: white;
   min-height: 100vh;
 }
 
+.product-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.cart-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+/*
 h1 {
   margin-top: 0;
 }
@@ -31,4 +39,4 @@ h1 {
 
 .cartItem>* {
   margin-right: 50px;
-}
+} */
